conformance/tests/gateway-address-routability-cluster-static.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-address-routability-cluster-static
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  addresses:
  - value: "PLACEHOLDER_USABLE_ADDRS"
    type: IPAddress
    routability: Cluster
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
